fix: table card on mobile errata 1

--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -14919,6 +14919,9 @@ tr[data-handle="-1"] {
 }
 
 @media only screen and (max-width: 768px) {
+  .td-datagrid > section > table > tbody tr {
+    background-color: transparent;
+  }
   .td-datagrid-rs {
     border-left-color: #ffffff !important;
     border-right-color: #ffffff !important;
@@ -14947,6 +14950,9 @@ tr[data-handle="-1"] {
   html[data-bs-theme=dark] .td-datagrid .td-datagrid-rs * {
     border-left-color: var(--content-background-color) !important;
     border-right-color: var(--content-background-color) !important;
+  }
+  html[data-bs-theme=dark] .td-datagrid > section > table > tbody tr {
+    background-color: rgb(30, 30, 30);
   }
 }
 /* scheduler */
